--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "echarts": "^5.4.2",
     "gsap": "^3.12.1",
     "mitt": "^3.0.0",
+    "postprocessing": "^6.32.1",
     "three": "^0.153.0",
     "vue": "^3.2.13"
   },
